--- a/papers/shared/shared-bibliography.bib
+++ b/papers/shared/shared-bibliography.bib
@@ -83,4 +83,88 @@
   publisher={SIAM}
 }
 
+% Spin networks and quantum gravity (LQG context)
+@article{rovelli1995spin,
+  title={Spin Networks and Quantum Gravity},
+  author={Rovelli, Carlo and Smolin, Lee},
+  journal={Physical Review D},
+  volume={52},
+  number={10},
+  pages={5743},
+  year={1995},
+  publisher={APS}
+}
+
+@article{depietri1996regge,
+  title={Geometry eigenvalues and scalar product from recoupling theory in loop quantum gravity},
+  author={De Pietri, R and Rovelli, C},
+  journal={Physical Review D},
+  volume={54},
+  number={4},
+  pages={2664},
+  year={1996},
+  publisher={APS}
+}
+
+% Biedenharn-Elliott identity and fundamental relations
+@article{biedenharn1953identity,
+  title={On the Angular Momentum Projection Quantum Numbers},
+  author={Biedenharn, L.C.},
+  journal={Oak Ridge National Laboratory Report},
+  year={1953}
+}
+
+@article{elliott1953theoretical,
+  title={Theoretical studies in nuclear structure V. The matrix elements of non-central forces with an application to the 2p-shell},
+  author={Elliott, J.P. and Lane, A.M.},
+  journal={Proceedings of the Royal Society of London. Series A},
+  volume={242},
+  number={1228},
+  pages={57--75},
+  year={1953},
+  publisher={The Royal Society London}
+}
+
+% Regge symmetry
+@article{regge1958symmetry,
+  title={Symmetry Properties of Clebsch-Gordan Coefficients},
+  author={Regge, Tullio},
+  journal={Nuovo Cimento},
+  volume={10},
+  pages={544--545},
+  year={1958}
+}
+
+@article{regge1959symmetry,
+  title={Symmetry Properties of Racah's Coefficients},
+  author={Regge, Tullio},
+  journal={Nuovo Cimento},
+  volume={11},
+  pages={116--117},
+  year={1959}
+}
+
+% Modern computational approaches
+@article{johansson2016fast,
+  title={Fast and accurate evaluation of Wigner 3j, 6j, and 9j symbols using prime factorisation and multi-word integer arithmetic},
+  author={Johansson, H.T. and Forss{\'e}n, C.},
+  journal={SIAM Journal on Scientific Computing},
+  volume={38},
+  number={1},
+  pages={A376--A384},
+  year={2016},
+  publisher={SIAM}
+}
+
+% SymPy (computational baseline)
+@article{meurer2017sympy,
+  title={SymPy: symbolic computing in Python},
+  author={Meurer, Aaron and Smith, Christopher P and Paprocki, Mateusz and others},
+  journal={PeerJ Computer Science},
+  volume={3},
+  pages={e103},
+  year={2017},
+  publisher={PeerJ Inc.}
+}
+
 % Add priors from papers/related/ as they're integrated
