chore(docs): replace Arcticoder references with Dawson Institute across paper sources and history

--- a/papers/paper/su2-3nj-unified-representations.tex
+++ b/papers/paper/su2-3nj-unified-representations.tex
@@ -30,9 +30,9 @@
        for SU(2) 3n-j Recoupling Coefficients}
 
 \author{
-  Arcticoder\\
-  \textit{Independent Researcher}\\
-  \texttt{https://github.com/arcticoder}
+  Dawson Institute\\
+  \textit{Dawson Institute}\\
+  \texttt{https://github.com/DawsonInstitute}
 }
 
 \date{\today}
