--- a/papers/sources/closedform.tex
+++ b/papers/sources/closedform.tex
@@ -46,7 +46,7 @@ This formula is the first truly closed-form, general expression for SU(2) 3nj re
 
 \begin{thebibliography}{9}
 \bibitem{uniform12j}
-Arcticoder, ``Uniform Closed-Form Representation of SU(2) 12j Symbols,'' May 25, 2025. Available at: \texttt{https://arcticoder.github.io/su2-3nj-uniform-closed-form/}
+Dawson Institute, ``Uniform Closed-Form Representation of SU(2) 12j Symbols,'' May 25, 2025. Available at: \texttt{https://dawsoninstitute.github.io/su2-3nj-uniform-closed-form/}
 
 \bibitem{universalGF}
 Arcticoder, ``A Universal Generating Functional for SU(2) 3nj Symbols,'' May 24, 2025. Available at: \texttt{https://arcticoder.github.io/su2-3nj-generating-functional/}
