--- a/papers/sources/node-matrix-elements.tex
+++ b/papers/sources/node-matrix-elements.tex
@@ -58,7 +58,7 @@ This opens the way to chart and study operator kernels in spin networks and rela
 
 \begin{thebibliography}{9}
 \bibitem{Uniform12j} A.~Arcticoder, \textit{Uniform Closed-Form Representation of SU(2) 12j Symbols}, May 25, 2025. Available: https://arcticoder.github.io/su2-3nj-uniform-closed-form/
-\bibitem{GenFun} A.~Arcticoder, \textit{A Universal Generating Functional for SU(2) 3nj Symbols}, May 24, 2025. Available: https://arcticoder.github.io/su2-3nj-generating-functional/
+\bibitem{GenFun} Dawson Institute, \textit{A Universal Generating Functional for SU(2) 3nj Symbols}, May 24, 2025. Available: https://dawsoninstitute.github.io/su2-3nj-generating-functional/
 \bibitem{Recurrences} A.~Arcticoder, \textit{Closed-Form Finite Recurrences for SU(2) 3nj Symbols}, May 25, 2025. Available: https://arcticoder.github.io/su2-3nj-recurrences/
 \bibitem{ProductFormula} A.~Arcticoder, \textit{A Closed-Form Hypergeometric Product Formula for General SU(2) 3nj Recoupling Coefficients}, May 25, 2025. Available: https://arcticoder.github.io/su2-3nj-closedform/
 \bibitem{Jordan1935} P.~Jordan, ``Der Zusammenhang der symmetrischen und linearen Gruppen und das Mehrkörperproblem,'' \textit{Zeitschrift für Physik}, vol.~94, no.~7–8, pp.~531–535, 1935.
