--- a/papers/sources/recurrences.tex
+++ b/papers/sources/recurrences.tex
@@ -2,14 +2,14 @@
 \usepackage{amsmath,amssymb}
 \usepackage{hyperref}
 \title{Closed-Form Finite Recurrences for SU(2) 3nj Symbols}
-\author{Arcticoder}
+\author{Dawson Institute}
 \date{May 25, 2025}
 
 \begin{document}
 \maketitle
 
 \begin{abstract}
-Building on the universal closed-form hypergeometric representation of SU(2) 3nj symbols \cite{arcticoder2025}, we present a finite set of algebraic three-term recurrence relations in the spin labels \(j_k\), together with minimal boundary data, which uniquely determine any SU(2) \(3nj\) recoupling coefficient. These recurrences allow computation of all \(3nj\) symbols in closed form without nested sums of \(6j\) symbols.
+Building on the universal closed-form hypergeometric representation of SU(2) 3nj symbols \cite{dawsoninstitute2025}, we present a finite set of algebraic three-term recurrence relations in the spin labels \(j_k\), together with minimal boundary data, which uniquely determine any SU(2) \(3nj\) recoupling coefficient. These recurrences allow computation of all \(3nj\) symbols in closed form without nested sums of \(6j\) symbols.
 \end{abstract}
 
 \section{General Recurrence System}
@@ -47,10 +47,10 @@ are given by the SU(2) \(3(n-1)j\) symbol on the tree with edge \(k\) removed, b
 
 \bibliographystyle{plain}
 \begin{thebibliography}{1}
-\bibitem{arcticoder2025}
-Arcticoder,
+\bibitem{dawsoninstitute2025}
+Dawson Institute,
 \emph{Universal Closed-Form Hypergeometric Representation of SU(2) 3nj Symbols},
-\url{https://arcticoder.github.io/su2-3nj-uniform-closed-form/},
+\url{https://dawsoninstitute.github.io/su2-3nj-uniform-closed-form/},
 2025.
 \end{thebibliography}
 
