--- a/papers/sources/uniform-closed-form.tex
+++ b/papers/sources/uniform-closed-form.tex
@@ -132,10 +132,10 @@ This derivation shows that the 12j symbol emerges from a \emph{single} \({}_5F_4
 
 \begin{thebibliography}{9}
 
-\bibitem{Arcticoder2025}
+\bibitem{DawsonInstitute2025}
 Arcticoder,
 \newblock \emph{A Universal Generating Functional for SU(2) 3nj Symbols},
-\newblock \href{https://arcticoder.github.io/su2-3nj-generating-functional/}{arcticoder.github.io/su2-3nj-generating-functional/}, 2025.
+\newblock \href{https://dawsoninstitute.github.io/su2-3nj-generating-functional/}{dawsoninstitute.github.io/su2-3nj-generating-functional/}, 2025.
 
 \bibitem{WeiDalgarno2003}
 Liqiang Wei and Alexander Dalgarno,
