fix(paper): escape underscores in validation table footnote to avoid LaTeX 'Missing $ inserted'

--- a/papers/paper/validation-tables.tex
+++ b/papers/paper/validation-tables.tex
@@ -59,7 +59,7 @@ all j=1 & $1/54$ & \checkmark \\
 all zeros & $1$ & \checkmark \\
 alternating 1,2 & $sqrt(5)/30000 + 7/6000$ & \checkmark \\
 \hline
-\multicolumn{3}{l}{Method: 6j_symbol_decomposition, Precision: 50 dps} \\
+\multicolumn{3}{l}{Method: \texttt{6j\_symbol\_decomposition}, Precision: 50 dps} \\
 \hline
 \end{tabular}
 \end{table}
