style(paper): set standard 1in margins via geometry package

--- a/papers/paper/su2-3nj-unified-representations.tex
+++ b/papers/paper/su2-3nj-unified-representations.tex
@@ -5,6 +5,7 @@
 \documentclass[12pt,letterpaper]{article}
 
 % Standard packages
+\usepackage[margin=1in]{geometry}
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage{graphicx}
 \usepackage{booktabs}
