feat(paper): arXiv endorsement polish pass
- Reconcile test counts: 178 total (21 integration + 157 unit) across all docs
- Harden validation table generator:
  - Add sympy_to_latex() to render expressions as proper LaTeX
  - Add escape_latex_text() for special chars (underscores, %, etc.)
  - Fix summary table to avoid double-counting integration checks
- Update paper abstract to state '178 automated tests' with breakdown
- Fix GitHub URLs: arcticoder → DawsonInstitute
- Add explicit half-integer 6j example in validation section
- Create scripts/prepare_arxiv_bundle.sh for submission packaging
- Update docs/SU2-TODO.md: A1-A4 + A8 complete (A5-A7 optional polish)

Current status: ~95% arXiv-ready (~18 pages, 1in margins, clean build)

--- a/papers/paper/test-build/su2-3nj-unified-representations.tex
+++ b/papers/paper/test-build/su2-3nj-unified-representations.tex
@@ -22,7 +22,7 @@
 }
 
 % Shared macros
-\input{../shared/shared-macros}
+\input{shared-macros}
 
 % Theorem environments
 \newtheorem{theorem}{Theorem}[section]
