fix(bib): update author names, add DOI and URLs for references, and improve consistency in bibliography entries

--- a/papers/paper/su2-3nj-unified-representations.tex
+++ b/papers/paper/su2-3nj-unified-representations.tex
@@ -99,7 +99,7 @@ Prior computational approaches include:
 
 \paragraph{Hypergeometric representations} Recognition that 3nj symbols are special hypergeometric functions. Raynal~\cite{raynal1979complete} provided complete 6j representations. We extend this to universal product formulas.
 
-\paragraph{Recurrence relations} Three-term recurrences build values from boundaries. Luscombe and Luban~\cite{luscombe1998three} systematized 3j/6j recurrences. We derive closed forms for coefficients.
+\paragraph{Recurrence relations} Three-term recurrences build values from boundaries. Luscombe and Luban~\cite{luscombe1998three} developed a simplified recursive algorithm for Wigner 3j and 6j symbols. We derive closed forms for coefficients.
 
 \paragraph{Generating functionals} Yutsis et al.~\cite{yutsis1962mathematical} introduced graphical methods. We develop systematic generating functional calculus for arbitrary valence.
 
