--- a/papers/shared/shared-bibliography.bib
+++ b/papers/shared/shared-bibliography.bib
@@ -5,20 +5,25 @@
 % Foundational work
 @book{varshalovich1988quantum,
   title={Quantum Theory of Angular Momentum},
-  author={Varshalovich, D.A. and Moskalev, A.N. and Khersonskii, V.K.},
+  author={Varshalovich, D. A. and Moskalev, A. N. and Khersonskii, V. K.},
+  publisher={WORLD SCIENTIFIC},
   year={1988},
-  publisher={World Scientific}
+  doi={10.1142/0270},
+  url={https://www.worldscientific.com/doi/abs/10.1142/0270}
 }
 
 @article{racah1942theory,
   title={Theory of Complex Spectra. II},
   author={Racah, Giulio},
-  journal={Physical Review},
+  journal={Phys. Rev.},
   volume={62},
   number={9-10},
   pages={438--462},
   year={1942},
-  publisher={APS}
+  month={Nov},
+  publisher={American Physical Society},
+  doi={10.1103/PhysRev.62.438},
+  url={https://link.aps.org/doi/10.1103/PhysRev.62.438}
 }
 
 @article{wigner1931gruppentheorie,
@@ -37,17 +42,20 @@
   number={10},
   pages={1961--1970},
   year={1975},
+  doi={10.1063/1.522426},
+  url={https://doi.org/10.1063/1.522426},
   publisher={AIP}
 }
 
 @article{luscombe1998three,
-  title={Three-term recurrence relations for 3-j and 6-j coefficients},
+  title={Simplified recursive algorithm for Wigner 3j and 6j symbols},
   author={Luscombe, James H. and Luban, Marshall},
   journal={Physical Review E},
   volume={57},
   number={6},
   pages={7274},
   year={1998},
+  doi={10.1103/PhysRevE.57.7274},
   publisher={APS}
 }
 
@@ -68,18 +76,22 @@
   number={12},
   pages={2398--2415},
   year={1979},
+  doi={10.1063/1.524047},
+  url={https://doi.org/10.1063/1.524047},
   publisher={AIP}
 }
 
 % Computational aspects
 @article{rasch2003efficient,
   title={Efficient storage scheme for precalculated Wigner 3j, 6j and Gaunt coefficients},
-  author={Rasch, Joachim and Yu, Anthony C.H.},
+  author={Rasch, J. and Yu, A. C. H.},
   journal={SIAM Journal on Scientific Computing},
   volume={25},
   number={4},
   pages={1416--1428},
-  year={2003},
+  year={2004},
+  doi={10.1137/S1064827503422932},
+  url={https://doi.org/10.1137/S1064827503422932},
   publisher={SIAM}
 }
 
@@ -90,8 +102,11 @@
   journal={Physical Review D},
   volume={52},
   number={10},
-  pages={5743},
+  pages={5743--5759},
   year={1995},
+  doi={10.1103/PhysRevD.52.5743},
+  eprint={gr-qc/9505006},
+  archivePrefix={arXiv},
   publisher={APS}
 }
 
@@ -127,27 +142,29 @@
 
 % Regge symmetry
 @article{regge1958symmetry,
-  title={Symmetry Properties of Clebsch-Gordan Coefficients},
+  title={Symmetry properties of Clebsch-Gordan's coefficients},
   author={Regge, Tullio},
-  journal={Nuovo Cimento},
+  journal={Nuovo Cim.},
   volume={10},
   pages={544--545},
-  year={1958}
+  year={1958},
+  doi={10.1007/BF02859841}
 }
 
 @article{regge1959symmetry,
   title={Symmetry Properties of Racah's Coefficients},
   author={Regge, Tullio},
-  journal={Nuovo Cimento},
+  journal={Nuovo Cim.},
   volume={11},
   pages={116--117},
-  year={1959}
+  year={1959},
+  doi={10.1007/BF02724914}
 }
 
 % Modern computational approaches
 @article{johansson2016fast,
   title={Fast and accurate evaluation of Wigner 3j, 6j, and 9j symbols using prime factorisation and multi-word integer arithmetic},
-  author={Johansson, H.T. and Forss{\'e}n, C.},
+  author={Johansson, H. T. and Forss{\'e}n, C.},
   journal={SIAM Journal on Scientific Computing},
   volume={38},
   number={1},
@@ -159,11 +176,13 @@
 % SymPy (computational baseline)
 @article{meurer2017sympy,
   title={SymPy: symbolic computing in Python},
-  author={Meurer, Aaron and Smith, Christopher P and Paprocki, Mateusz and others},
+  author={Meurer, Aaron and Smith, Christopher P. and Paprocki, Mateusz and Certik, Ondrej and Rocklin, Matthew and Kumar, AMiT and Ivanov, Sergiu and Moore, Jason K. and Singh, Sartaj and Rathnayake, Thilina and Vig, Sean and Granger, Brian E. and Muller, Richard P. and Bonazzi, Francesco and Gupta, Harsh and Vats, Shivam and Johansson, Fredrik and Pedregosa, Fabian and Curry, Matthew J. and Saboo, Ashutosh and Fernando, Isuru and et al.},
   journal={PeerJ Computer Science},
   volume={3},
   pages={e103},
   year={2017},
+  doi={10.7717/peerj-cs.103},
+  url={https://doi.org/10.7717/peerj-cs.103},
   publisher={PeerJ Inc.}
 }
 
