--- a/papers/shared/shared-bibliography.bib
+++ b/papers/shared/shared-bibliography.bib
@@ -68,7 +68,8 @@
   title={Mathematical Apparatus of the Theory of Angular Momentum},
   author={Yutsis, A.P. and Levinson, I.B. and Vanagas, V.V.},
   year={1962},
-  publisher={Israel Program for Scientific Translations}
+  publisher={Israel Program for Scientific Translations},
+  url={https://ui.adsabs.harvard.edu/abs/1962mata.book.....Y}
 }
 
 % Hypergeometric representations
@@ -122,7 +123,8 @@
   number={4},
   pages={2664},
   year={1996},
-  publisher={APS}
+  publisher={APS},
+  doi={10.1103/PhysRevD.54.2664}
 }
 
 % Biedenharn-Elliott identity and fundamental relations
@@ -174,7 +176,8 @@
   number={1},
   pages={A376--A384},
   year={2016},
-  publisher={SIAM}
+  publisher={SIAM},
+  doi={10.1137/15M1021908}
 }
 
 % SymPy (computational baseline)
